--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^12.23.12",
     "i18next": "^25.6.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-i18next": "^15.4.2",
