--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.5.0",
     "react-nice-select": "^1.0.6",
     "react-player": "^3.4.0",
+    "react-scroll": "^1.9.3",
     "react-time-picker": "^8.0.2",
     "recharts": "^3.1.2",
     "split-type": "^0.3.4",
@@ -70,6 +71,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.21",
     "compression": "^1.8.1",
     "compression-webpack-plugin": "^11.1.0",
